tests/unit/language/errors/handle_type_mismatch_error.arche
// RUN: %arche build -o %t %s > %t.out 2>&1 ; grep -q "type mismatch\|error" %t.out
Player :: arche { pos :: float }

Enemy :: arche { health :: float }

[10] Player;

[10] Enemy;

main :: proc() {
  insert(Player, 1.0)(p:, _:);
  delete(table<Enemy>, p)(_:);
}
